Update and rename main.html to index.html

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <p>
         I believe I could enhance the code to process multiple files at the same time using multi-threading or simply have each file linearly processed to increase efficiency.
         I could also add an option to change the file search using an item name to be case-sensitive, ignore capitalizations and spaces, and possibly process binary, decimal,
-        and hexadecimal encoding to enhance flexibility and functionality. Most of the class’s methods/functions could have exception handling to avoid input errors and file
-        streaming errors to enhance security. I’ve thought about making the code work with networks to increase flexibility and functionality, but I would need to address the
-        security part of that. But I think the top priority will need to be assessing the projects’ pros and cons and improving the code itself to be more efficient and
+        and hexadecimal encoding to enhance flexibility and functionality. Most of the classâ€™s methods/functions could have exception handling to avoid input errors and file
+        streaming errors to enhance security. Iâ€™ve thought about making the code work with networks to increase flexibility and functionality, but I would need to address the
+        security part of that. But I think the top priority will need to be assessing the projectsâ€™ pros and cons and improving the code itself to be more efficient and
         understandable. There are so many ways I could change how the project works.
     </p>
 
