--- a/index.html
+++ b/index.html
@@ -9,28 +9,35 @@
     <style>
         body {
             font-family: monospace,'Courier New', Courier;
-            color: black;
             background-color: rgb(204, 204, 204);
             width: 100%;
         }
 
         h1 {
+            color: black;
             font-size: 3em;
             margin: 1em;
         }
 
         h2 {
+            color: black;
             font-size: 2em;
             margin: 1em;
         }
 
         p {
+            color: black;
+            margin: 1em;
+            font-size: 1.35em;
+        }
+        a{
             margin: 1em;
             font-size: 1.35em;
         }
     </style>
 
     <h1>Project Summary:</h1>
+    <a href="https://github.com/Mx-Butterscotch-they-them/CornerGrocerProject">Select Me to Visit CornerGrocerProject Repository!</a>
     <p><b>Date last updated:</b> 12/15/2025 at 6:52 PM (18:52, 1854 hours) ET</p>
     <p>
         The project is based on a class called ItemTracker. The ItemTracker class allows users to search for items, display item frequency and print them into another file, display item frequency in the form of a histogram and print it into
@@ -71,3 +78,4 @@
 
 </body>
 </html>
+
