--- a/index.html
+++ b/index.html
@@ -38,37 +38,38 @@
 
     <h1>Project Summary:</h1>
     <a href="https://github.com/Mx-Butterscotch-they-them/CornerGrocerProject">Select Me to Visit CornerGrocerProject Repository!</a>
-    <p><b>Date last updated:</b> 12/15/2025 at 6:52 PM (18:52, 1854 hours) ET</p>
+    <p><b>Date last updated: </b>12/16/2025 at 2:54 AM ET</p>
     <p>
         The project is based on a class called ItemTracker. The ItemTracker class allows users to search for items, display item frequency and print them into another file, display item frequency in the form of a histogram and print it into
         another file, change the input file containing the items to another file, and change the name of the output file containing the results. This class is designed to work with
         files only, but may be expanded in further updates to increase flexibility. <b>The diagrams should be in the "Documentation" folder.</b>
 </p>
 
-    <h2>What did you do particularly well?</h2>
+    <h2>What did you do particularly well on?</h2>
     <p>
         I did particularly well when it came to designing and implementing the class and the class member methods/functions.
         I tried to keep the file streaming logic to only have the scope of the method to avoid any leaks. I thought I did well with the
         standard template library maps, but I think I will spend some time practicing and studying it for future uses.
     </p>
 
-    <h2>What skills from this project will be particularly transferable to other projects or course work?</h2>
+    <h2>What skills from this project will be particularly transferable to other projects?</h2>
     <p>
         I believe I could enhance the code to process multiple files at the same time using multi-threading or simply have each file linearly processed to increase efficiency.
         I could also add an option to change the file search using an item name to be case-sensitive, ignore capitalizations and spaces, and possibly process binary, decimal,
         and hexadecimal encoding to enhance flexibility and functionality. Most of the class’s methods/functions could have exception handling to avoid input errors and file
         streaming errors to enhance security. I’ve thought about making the code work with networks to increase flexibility and functionality, but I would need to address the
         security part of that. But I think the top priority will need to be assessing the projects’ pros and cons and improving the code itself to be more efficient and
-        understandable. There are so many ways I could change how the project works.
+        understandable. There are so many ways I could change how the software project works.
     </p>
 
-    <h2>Which pieces of the code did you find most challenging to write, and how did you overcome this? What tools or resources are you adding to your support network?</h2>
+    <h2>Which pieces of the code did you find most challenging to make, and how did you overcome this? What tools or resources are you adding to your support network?</h2>
     <p>
         I thought the use of the maps library and file streaming together was difficult at first. I had to use online sources like c-plusplus.com, cppscripts.com, W3School, and GeeksForGeeks
-        to provide examples and syntax of the programming concepts. I also needed to remind myself of some of the syntax rules for class diagrams.
+        to provide examples and syntax of the programming concepts. I also needed to remind myself of some of the syntax rules for class diagrams using those same sources. 
+        Whenever I get stuck on developing a part of the code, I usually relax for a few minutes and try continuing development again.
     </p>
 
-    <h2>What skills from this project will be particularly transferable to other projects or course work?</h2>
+    <h2>What skills from this project will be particularly transferable to other projects?</h2>
     <p>Mainly, SDLC diagram designing, knowing C++ syntax, problem-solving, and adaptability are my top skills that are transferable to other future projects and course work.</p>
 
     <h2>How did you make this program maintainable, readable, and adaptable?</h2>
@@ -78,4 +79,5 @@
 
 </body>
 </html>
+
 
